# python-sdk

./: .coveragerc  .env-example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  README.md  coverage.lcov  mypy.ini  package.json  pyproject.toml  pytest.ini  report-20251128023525.html  report-20251128024031.html  report-20251128060849.html  report-20251128075839.html  report-20251202080536.html  report-20251202095313.html  report-20251205064811.html  report-20251205072412.html  report-20251209014921.html  report-20251209064214.html  report-20251211094356.html  report-20251211102229.html  report-20251212030039.html  report-20251212083341.html  report-20260127062052.html  report-20260127070714.html  report-20260127093259.html  report-20260224072216.html  report-20260225052404.html  report-20260225060716.html  report-20260225063826.html  report-20260225065219.html  report-20260225072214.html  report-20260225080533.html  report-20260225083853.html  (+14 more)
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-and-test-workflow.yml  build-test-workflow.yml  pr-external.yaml  pr-internal.yaml  publish-package.yml  release.yml  test-publish.yml  test-release.yml
.github/worksflows/: pr-internal.yml
scripts/: .env-example  config.json  config_impl.json  generate_client.py  generate_client_impl.py
src/: story_client.py
src/abi/: IPAssetRegistry_client.py  LicenseRegistry.json  LicenseRegistry_client.py
src/resources/: IPAsset.py  License.py  Royalty.py
src/scripts/: generate_client_impl.py
(+182 files in other folders)
